--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# CK extensions
+# C extensions
 *.so
 
 # Distribution / packaging
@@ -138,7 +138,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# CK extensions
+# C extensions
 *.so
 
 # Distribution / packaging
